implantação de cache